test/errors/e38.gm

Proc P(G: Graph)
{
	Node_Set(G) Set;
	Foreach(n : G.Nodes) {
		Set.Add(n);
		Set.Remove(n);	//warning - set is mutatet in two different directions at the same time
	}
}

